--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   </div>
 
   <div id="jaybocc2Res">Roll for Initiative</div>
+
+  <div>Most Recent Roll<div>
+  <div id="most-recent-roll"><div>
+  
   <script src="/assets/js/index.js"></script>
 </body>
 </html>
