final edition for now...

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <div>Most Recent Roll<div>
   <div id="most-recent-roll"><div>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.7.3/localforage.min.js" integrity="sha256-H/ZsHjKSJUnQyCQHZwPmn7VTWFeTTI+qgCP1GkiB9zI=" crossorigin="anonymous"></script>
   <script src="/assets/js/index.js"></script>
 </body>
 </html>
